--- a/package.json
+++ b/package.json
@@ -118,6 +118,8 @@
         "mpath": "^0.9.0",
         "mquery": "^4.0.3",
         "ms": "^2.0.0",
+        "multer": "^1.4.5-lts.1",
+        "multiparty": "^4.2.3",
         "negotiator": "^0.6.3",
         "nodemon": "^2.0.16",
         "nopt": "^1.0.10",
